diesel_compile_tests/tests/fail/delete_statement_does_not_support_returning_methods_on_sqlite.stderr
error[E0277]: the trait bound `diesel::query_builder::returning_clause::ReturningClause<(columns::id, columns::name)>: QueryFragment<Sqlite, backend::sql_dialect::returning_clause::DoesNotSupportReturningClause>` is not satisfied
    --> tests/fail/delete_statement_does_not_support_returning_methods_on_sqlite.rs:17:10
     |
17   |         .get_result(&mut connection);
     |          ^^^^^^^^^^ the trait `QueryFragment<Sqlite, backend::sql_dialect::returning_clause::DoesNotSupportReturningClause>` is not implemented for `diesel::query_builder::returning_clause::ReturningClause<(columns::id, columns::name)>`
     |
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               <diesel::query_builder::returning_clause::ReturningClause<Expr> as QueryFragment<DB, backend::sql_dialect::returning_clause::PgLikeReturningClause>>
               <diesel::query_builder::returning_clause::ReturningClause<Expr> as QueryFragment<DB, sqlite::backend::SqliteReturningClause>>
               <diesel::query_builder::returning_clause::ReturningClause<Expr> as QueryFragment<DB>>
     = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `diesel::query_builder::returning_clause::ReturningClause<(columns::id, columns::name)>`
     = note: 1 redundant requirement hidden
     = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>, diesel::query_builder::returning_clause::ReturningClause<(columns::id, columns::name)>>`
     = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::SqliteConnection, _>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>>`
note: required by a bound in `get_result`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `get_result`

error[E0277]: the trait bound `diesel::query_builder::returning_clause::ReturningClause<columns::name>: QueryFragment<Sqlite, backend::sql_dialect::returning_clause::DoesNotSupportReturningClause>` is not satisfied
    --> tests/fail/delete_statement_does_not_support_returning_methods_on_sqlite.rs:21:10
     |
21   |         .get_result(&mut connection);
     |          ^^^^^^^^^^ the trait `QueryFragment<Sqlite, backend::sql_dialect::returning_clause::DoesNotSupportReturningClause>` is not implemented for `diesel::query_builder::returning_clause::ReturningClause<columns::name>`
     |
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               <diesel::query_builder::returning_clause::ReturningClause<Expr> as QueryFragment<DB, backend::sql_dialect::returning_clause::PgLikeReturningClause>>
               <diesel::query_builder::returning_clause::ReturningClause<Expr> as QueryFragment<DB, sqlite::backend::SqliteReturningClause>>
               <diesel::query_builder::returning_clause::ReturningClause<Expr> as QueryFragment<DB>>
     = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `diesel::query_builder::returning_clause::ReturningClause<columns::name>`
     = note: 1 redundant requirement hidden
     = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>, diesel::query_builder::returning_clause::ReturningClause<columns::name>>`
     = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::SqliteConnection, _>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>, diesel::query_builder::returning_clause::ReturningClause<columns::name>>`
note: required by a bound in `get_result`
    --> $DIESEL/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `get_result`
